// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcButtonGroup :props :items - should render the button group with three items with one disabled 1`] = `
<div
  class="ec-btn-group"
>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
  >
    
    Yes
  
  </button>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
    disabled="disabled"
  >
    
    No
  
  </button>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
  >
    
    Maybe
  
  </button>
</div>
`;

exports[`EcButtonGroup :props :items - should render the button group with two items all on outline 1`] = `
<div
  class="ec-btn-group"
>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
  >
    
    Yes
  
  </button>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
  >
    
    No
  
  </button>
</div>
`;

exports[`EcButtonGroup :props :items - should render the button group with two items with one disabled 1`] = `
<div
  class="ec-btn-group"
>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
  >
    
    Yes
  
  </button>
  <button
    class="ec-btn ec-btn--md ec-btn--primary ec-btn-group__btn ec-btn--outline"
    disabled="disabled"
  >
    
    No
  
  </button>
</div>
`;
